--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -85,9 +85,22 @@ section {
     
     }
 .sec5 {
-display: none; 
+    display: none; 
    transform: translateY(0) scale(1); 
    background-color: #27AE79;
+}
+
+.active {
+    display: block; 
+    animation: scaleAnim 1s ease-in-out;
+    @keyframes scaleAnim {
+        0% {
+            transform: translateY(-100%) scale(0);
+        }
+        100% {
+            transform: translateY(0) scale(1);
+        }
+    }
 }
 .active-btn {
     background-color: var(--color-secondary)!important;
