--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -66,28 +66,28 @@ section {
 .sec1{
     display: none; 
        transform: translateY(0) scale(1); 
-       background-color: #27AE60;
+
     } 
 .sec2{
     display: none; 
        transform: translateY(0) scale(1); 
-       background-color: #27AEde;
+
     }
 .sec3{
     display: none; 
        transform: translateY(0) scale(1); 
-       background-color: #27AE89;
+  
     }
 .sec4{
     display: none; 
        transform: translateY(0) scale(1); 
-       background-color: #27AEFF;
+
     
     }
 .sec5 {
     display: none; 
    transform: translateY(0) scale(1); 
-   background-color: #27AE79;
+
 }
 
 .active {
@@ -95,10 +95,11 @@ section {
     animation: scaleAnim 1s ease-in-out;
     @keyframes scaleAnim {
         0% {
-            transform: translateY(-100%) scale(0);
+            transform: translateY(-100%) scaleY(0);
         }
         100% {
-            transform: translateY(0) scale(1);
+            transform: translateY(0) scaleY(1);
+
         }
     }
 }
@@ -138,3 +139,34 @@ section {
         }
     }
 }
+
+/*Header contents*/
+.header-content {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    height: 100%;
+    .left-header{
+        display: flex;
+        align-items: center;
+        position: relative;
+        .h-shape{
+            transition: var(--standard-transformation) ;
+            width: 65%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            top: 0;
+            
+            left: 0;
+            z-index: -1;
+            clip-path: polygon(0 0 , 46% 0, 79% 100%, 0% -100%);
+
+        }
+    }
+
+
+}
+
+
+
+/*independent components*/
