--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -156,17 +156,67 @@ section {
             background-color: var(--color-secondary);
             position: absolute;
             top: 0;
-            
             left: 0;
             z-index: -1;
-            clip-path: polygon(0 0 , 46% 0, 79% 100%, 0% -100%);
+            clip-path: polygon(0 0 , 46% 0, 79% 100%, 0% 100%);
 
         }
+        .image{
+            border-radius: var(--br-sm-2);
+            height: 90%;
+            width: 68%;
+            margin-left: 4rem ;
+            background-color: var(--color-black);
+            transition: var(--standard-transformation);
+            img{
+                width: 100%;
+                height:100% ; 
+                object-fit: cover;
+                transition: var(--standard-transformation);
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0%);
+                }
+            }
+        }
     }
+    .right-header{
+        display: flex ; 
+        flex-direction: column; 
+        justify-content: center;
+        padding-right: 18rem;
+        .name{
+            font-size: 3rem ;
+            span{
+                color: var(--color-secondary);
 
+            }
+        }
+        p{
+            margin: 1.5 rem 0 ; 
+            line-height: 2rem;
+        }
+    }
 
 }
 
 
 
 /*independent components*/
+.main-btn {
+
+    border-radius: 30px;
+    color: inherit;
+    font-weight: 600;
+    position: relative;
+    border: 1px solid var(--color-secondary) ; 
+    display: flex ;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+
+    .btn-text{
+        padding: 0 2rem;
+    }
+
+}
