--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,7 +203,32 @@ section {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  width: 60%;
 }
 .main-btn .btn-text {
   padding: 0 2rem;
+}
+.main-btn .btn-icon {
+  background-color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 1 rem;
+  scale: 1.3;
+}
+.main-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  transition: var(--standard-transformation);
+  z-index: -1;
+}
+.main-btn:hover::before {
+  width: 100%;
+  height: 100%;
+  transform: translateX(0);
+  background-color: var(--color-secondary);
 }/*# sourceMappingURL=styles.css.map */
