--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,4 +231,28 @@ section {
   height: 100%;
   transform: translateX(0);
   background-color: var(--color-secondary);
+}
+
+.main-title {
+  text-align: center;
+}
+.main-title h2 {
+  position: relative;
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 700;
+}
+.main-title h2 span {
+  color: var(--color-secondary);
+}
+.main-title h2 .big-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: var(--color-grey-5);
+  transition: var(--standard-transformation);
+  z-index: -1;
+  transform: translate(-50%, 50%);
+  font-weight: 800;
+  font-size: 6.3rem;
 }/*# sourceMappingURL=styles.css.map */
