--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,6 +192,70 @@ section {
   line-height: 2rem;
 }
 
+/*About*/
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5 rem;
+}
+.about-container .right-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.about-container .right-about .about-item {
+  border: 1px solid var(--color-grey-5);
+  border-radius: 5px;
+  transition: var(--standard-transformation);
+  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+}
+.about-container .right-about .about-item:hover {
+  cursor: default;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  transform: translateY(-5px);
+  border: 1px solid var(--color-secondary);
+}
+.about-container .right-about .about-item .abt-text {
+  padding: 1.5 rem;
+  display: flex;
+  flex-direction: column;
+}
+.about-container .right-about .about-item .abt-text .large-text {
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--color-secondary);
+}
+.about-container .right-about .about-item .abt-text .small-text {
+  padding-left: 3rem;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: var(--color-grey-1);
+  letter-spacing: 2px;
+}
+.about-container .right-about .about-item .abt-text .small-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 2rem;
+  height: 2px;
+  background-color: var(--color-grey-5);
+}
+.about-container .left-about {
+  padding-right: 5rem;
+}
+.about-container .left-about p {
+  line-height: 2rem;
+  padding: 1 rem;
+  color: var(--color-grey-1);
+}
+.about-container .left-about h4 {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
 /*independent components*/
 .main-btn {
   border-radius: 30px;
@@ -247,12 +311,14 @@ section {
 }
 .main-title h2 .big-text {
   position: absolute;
+  display: inline-block;
+  width: 150%;
   top: 50%;
   left: 50%;
   color: var(--color-grey-5);
   transition: var(--standard-transformation);
   z-index: -1;
-  transform: translate(-50%, 50%);
+  transform: translate(-50%, -50%);
   font-weight: 800;
   font-size: 6.3rem;
 }/*# sourceMappingURL=styles.css.map */
