--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -253,6 +253,7 @@ section {
         padding-right: 5rem;
         p{
             line-height: 2rem;
+
             padding: 1 rem;
             color: var(--color-grey-1);
 
@@ -261,9 +262,52 @@ section {
             font-size: 2rem;
             text-transform: uppercase;
         }
+        .btn-con{
+            width: 120%;
+        }
     }
 }
 
+.about-stats{
+    padding-top: 4rem; 
+    .progress-bars{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2rem;
+        .progress-bar{
+            display: flex;
+            flex-direction: column;
+            .prog-title {
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            .progress-con{
+                display: flex;
+                align-items: center;
+                .prog-text{
+                    color: var(--color-grey-2);
+                }
+                .progress{
+                    width: 100%;
+                    height: .45rem;
+                    background-color: var(--color-grey-4);
+                    margin-left: 1rem;
+                    position: relative;
+                    span{
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        
+                        height: 100%;
+                        background-color: var(--color-secondary);
+                        
+                        
+                    }
+                }
+            }
+        }
+    }
+}
 
 /*independent components*/
 
