--- a/styles/styles.css
+++ b/styles/styles.css
@@ -297,6 +297,72 @@ section {
   background-color: var(--color-secondary);
 }
 
+.stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem;
+  position: relative;
+}
+.stat-title::before {
+  content: "";
+  position: absolute;
+  top: 2rem;
+  width: 100%;
+  transform: translateX(-42%);
+  height: 2px;
+  background-color: var(--color-grey-0);
+}
+
+.time-line {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+}
+.time-line .timeline-item {
+  position: relative;
+  padding-left: 3rem;
+  border-left: 1px solid var(--color-grey-5);
+}
+.time-line .timeline-item .t1-icon {
+  position: absolute;
+  left: -27px;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-secondary);
+}
+.time-line .timeline-item .t1-icon i {
+  font-size: 1.3rem;
+}
+.time-line .timeline-item .t1-duration {
+  padding: 0.2rem 0.6rem;
+  background-color: var(--color-grey-5);
+  display: inline-block;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.time-line .timeline-item h5 {
+  padding: 1rem 0;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.time-line .timeline-item h5 span {
+  color: var(--color-grey-2);
+  font-weight: 500;
+  font-size: 1.2rems;
+}
+.time-line .timeline-item p {
+  color: var(--color-grey-2);
+}
+
 /*independent components*/
 .main-btn {
   border-radius: 30px;
