--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -146,6 +146,7 @@ section {
     grid-template-columns: repeat(2,1fr);
     height: 100%;
     .left-header{
+
         display: flex;
         align-items: center;
         position: relative;
@@ -380,6 +381,101 @@ position: relative ;
     }
 }
 
+.general-body {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 1rem ;
+    padding-bottom: 3rem;
+    .general-item {
+        padding-top: 2rem;
+        padding-bottom: 0.5rem;
+        .general-image{
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: var(--standard-transformation);
+                &:hover{
+                    transform: scale(1.1) ; 
+                    border: var(--color-grey-2) 4px solid;
+                }
+            }
+        }
+        .general-description{
+            p{
+            font-size: 0.8rem;
+            text-align: center;
+            }
+            color: var(--color-grey-2);
+            transition: var(--standard-transformation);
+            &:hover{
+                transform: scale(1.2) ; 
+                border: var(--color-grey-2) 4px solid;
+            }
+        }
+        h5{
+            padding-bottom: 0.5rem;
+            text-align: center;
+            border-radius: 3px;
+        }
+
+ }
+
+
+}
+
+.contact-body{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 2rem ;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    h5{
+        padding-top: 1.3rem ;
+        padding-bottom: 1.3rem; 
+        text-transform: uppercase;
+        text-align: left;
+        font-size: 1.3rem;
+        font-weight: 600;
+}
+.input-contact{
+    height:15%;
+    background-color: var(--color-grey-5);
+    border-radius: 1rem;
+    color: var(--color-grey-0);
+    font-weight: 400;
+    font-size: 1.1rem;
+    width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+  .right-container{
+  
+
+.input-message{
+    background-color: var(--color-grey-5);
+    border-radius: 1rem;
+    color: var(--color-grey-0);
+    height:52%;
+    width: 100%;
+    font-weight: 400;
+    font-size: 1.1rem;
+    padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+    
+
+}
+
+  }
+}
+.btn-send {
+    padding-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /*independent components*/
 
