Update the layout :
- Changed the style of the about page to emphasize information section
- Changed the styling of cv buttons to be more visible
- Updated the CV to look for an internship

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -194,16 +194,17 @@ section {
             }
         }
         p{
-            margin: 1.5 rem 0 ; 
+            margin: 1.5rem 0 ; 
             line-height: 2rem;
+        }
+        .btn-con {
+            width: 120%;
         }
     }
 
 }
 /*About*/
 .about-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
     padding-top: 3.5rem;
     padding-bottom: 5 rem ;
     .right-about{
@@ -251,20 +252,26 @@ section {
         }
     }
     .left-about{
-        padding-right: 5rem;
+        padding-bottom: 3rem;
         p{
             line-height: 2rem;
 
-            padding: 1 rem;
+            padding: 1rem;
             color: var(--color-grey-1);
 
         }
         h4{
             font-size: 2rem;
             text-transform: uppercase;
+            padding-bottom: 1rem;
         }
-        .btn-con{
-            width: 120%;
+        
+    }
+    .btn-con{
+        padding-top: 3rem;
+        width: 100% !important; 
+        a {
+            width: 100%;
         }
     }
 }
@@ -507,7 +514,7 @@ position: relative ;
 
 
 .main-btn {
-
+    width: 100%;
     border-radius: 30px;
     color: inherit;
     font-weight: 600;
@@ -518,6 +525,7 @@ position: relative ;
     justify-content: center;
     overflow: hidden;
     width: 60%;
+    padding-right: 1rem;
     .btn-text{
         padding: 0 2rem;
     }
@@ -527,7 +535,6 @@ position: relative ;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
-        padding: 1 rem;
         scale: 1.3;
         
     }
