--- a/styles/styles.css
+++ b/styles/styles.css
@@ -188,14 +188,15 @@ section {
   color: var(--color-secondary);
 }
 .header-content .right-header p {
-  margin: 1.5 rem 0;
+  margin: 1.5rem 0;
   line-height: 2rem;
+}
+.header-content .right-header .btn-con {
+  width: 120%;
 }
 
 /*About*/
 .about-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   padding-top: 3.5rem;
   padding-bottom: 5 rem;
 }
@@ -244,19 +245,24 @@ section {
   background-color: var(--color-grey-5);
 }
 .about-container .left-about {
-  padding-right: 5rem;
+  padding-bottom: 3rem;
 }
 .about-container .left-about p {
   line-height: 2rem;
-  padding: 1 rem;
+  padding: 1rem;
   color: var(--color-grey-1);
 }
 .about-container .left-about h4 {
   font-size: 2rem;
   text-transform: uppercase;
+  padding-bottom: 1rem;
 }
-.about-container .left-about .btn-con {
-  width: 120%;
+.about-container .btn-con {
+  padding-top: 3rem;
+  width: 100% !important;
+}
+.about-container .btn-con a {
+  width: 100%;
 }
 
 .about-stats {
@@ -470,6 +476,7 @@ section {
 
 /*independent components*/
 .main-btn {
+  width: 100%;
   border-radius: 30px;
   color: inherit;
   font-weight: 600;
@@ -480,6 +487,7 @@ section {
   justify-content: center;
   overflow: hidden;
   width: 60%;
+  padding-right: 1rem;
 }
 .main-btn .btn-text {
   padding: 0 2rem;
@@ -490,7 +498,6 @@ section {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  padding: 1 rem;
   scale: 1.3;
 }
 .main-btn::before {
