--- a/styles/styles.css
+++ b/styles/styles.css
@@ -314,6 +314,7 @@ section {
   content: "";
   position: absolute;
   top: 2rem;
+  left: 0;
   width: 100%;
   height: 2px;
   background-color: var(--color-grey-0);
